--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "transform": {
       ".*\\.(vue)$": "vue-jest",
       "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(ts)$": "babel-jest"
+      ".*\\.(ts)$": "babel-jest",
+      "vee-validate/dist/rules": "babel-jest"
     },
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!vee-validate/dist/rules)"
+    ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "setupFiles": [
-      "./tests/setup.js"
-    ]
+    }
   },
   "babel": {
     "presets": [
@@ -32,7 +33,9 @@
     "test:unit": "jest"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap-vue": "^2.0.4",
+    "es6-promise": "^4.2.8",
     "flatpickr": "^4.5.1",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
@@ -40,6 +43,7 @@
     "vue": "^2.6.6",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
+    "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.0.2",
     "vue2-transitions": "^0.2.3",
     "vuex": "^3.6.0"
